--- a/SecurityDriven.Inferno.Tests.csproj
+++ b/SecurityDriven.Inferno.Tests.csproj
@@ -46,6 +46,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SecurityDriven.Inferno">
+      <HintPath>..\SecurityDriven.Inferno\bin\Release\SecurityDriven.Inferno.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -67,12 +70,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CryptoRandomTests.cs" />
     <Compile Include="UnitTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SecurityDriven.Inferno\SecurityDriven.Inferno.csproj">
-      <Project>{aec580cb-0774-407a-8274-c356dbf224a4}</Project>
-      <Name>SecurityDriven.Inferno</Name>
-    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
