More tests. Better, more comprehensive tests.

--- a/SecurityDriven.Inferno.Tests.csproj
+++ b/SecurityDriven.Inferno.Tests.csproj
@@ -74,6 +74,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="HMACTests.cs" />
     <Compile Include="UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
