--- a/SecurityDriven.Inferno.TestsCore.csproj
+++ b/SecurityDriven.Inferno.TestsCore.csproj
@@ -13,12 +13,16 @@
 		<DefineConstants>NETCOREAPP2_1</DefineConstants>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netcoreapp2.1|AnyCPU'">
+	  <LangVersion>latest</LangVersion>
+	</PropertyGroup>
+
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
-		<PackageReference Include="MSTest.TestAdapter" Version="1.3.0-beta2" />
-		<PackageReference Include="MSTest.TestFramework" Version="1.3.0-beta2" />
-		<PackageReference Include="System.Security.Cryptography.Cng" Version="4.5.0-rc1" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0-rc1" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
+		<PackageReference Include="MSTest.TestAdapter" Version="1.3.1" />
+		<PackageReference Include="MSTest.TestFramework" Version="1.3.1" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+		<PackageReference Include="System.Security.Cryptography.Cng" Version="4.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -29,6 +33,12 @@
 		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'net462' ">
 			<HintPath>..\SecurityDriven.Inferno\bin\Release\net462\SecurityDriven.Inferno.dll</HintPath>
 		</Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Properties\Settings.settings">
+	    <Generator>SettingsSingleFileGenerator</Generator>
+	  </None>
 	</ItemGroup>
 
 </Project>
