--- a/SecurityDriven.Inferno.TestsCore.csproj
+++ b/SecurityDriven.Inferno.TestsCore.csproj
@@ -1,19 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>netcoreapp2.1;net462;</TargetFrameworks>
 		<IsPackable>false</IsPackable>
-	</PropertyGroup>
-
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'net462'">
-		<DefineConstants>NET462;NETFULL</DefineConstants>
-	</PropertyGroup>
-
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.1'">
-		<DefineConstants>NETCOREAPP2_1</DefineConstants>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netcoreapp2.1|AnyCPU'">
+		<Configurations>Debug;Release;DebugNETStandard;ReleaseNETStandard</Configurations>
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
@@ -22,16 +12,17 @@
 		<PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
 		<PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
-		<PackageReference Include="System.Security.Cryptography.Cng" Version="4.5.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" !$(Configuration.EndsWith('NETStandard')) ">
+		<ProjectReference Include="..\SecurityDriven.Inferno\SecurityDriven.Inferno.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'netcoreapp2.1' ">
-			<HintPath>..\SecurityDriven.Inferno\bin\Release\netcoreapp2.1\SecurityDriven.Inferno.dll</HintPath>
-		</Reference>
-
-		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'net462' ">
-			<HintPath>..\SecurityDriven.Inferno\bin\Release\net462\SecurityDriven.Inferno.dll</HintPath>
+		<PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+		<PackageReference Include="System.Security.Cryptography.Cng" Version="4.5.0" />
+		<Reference Include="SecurityDriven.Inferno" Condition=" $(Configuration.EndsWith('NETStandard')) ">
+			<HintPath>..\SecurityDriven.Inferno\bin\$(Configuration.Replace('NETStandard', ''))\netstandard2.0\SecurityDriven.Inferno.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 
