--- a/SecurityDriven.Inferno.Tests.csproj
+++ b/SecurityDriven.Inferno.Tests.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp2.1;net462;netcoreapp3.1</TargetFrameworks>
+		<TargetFrameworks>net462;netcoreapp3.1;net5;net6</TargetFrameworks>
 		<IsPackable>false</IsPackable>
 		<SignAssembly>true</SignAssembly>
 		<DelaySign>false</DelaySign>
+		<LangVersion>latest</LangVersion>
 		<AssemblyOriginatorKeyFile>Inferno.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 
@@ -12,38 +13,38 @@
 		<DefineConstants>NET462;NETFULL</DefineConstants>
 	</PropertyGroup>
 
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.1'">
-		<DefineConstants>NETCOREAPP2_1</DefineConstants>
+	<PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1'">
+		<DefineConstants>NETCOREAPP3_1</DefineConstants>
 	</PropertyGroup>
 
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1'">
+	<PropertyGroup Condition=" '$(TargetFramework)' == 'net5'">
 		<DefineConstants>NETSTANDARD</DefineConstants>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netcoreapp2.1|AnyCPU'">
-		<LangVersion>latest</LangVersion>
-	</PropertyGroup>
-
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-		<PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
-		<PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
-		<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="5.0.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+		<PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
+		<PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+		<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
 		<PackageReference Include="System.Security.Cryptography.Cng" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'netcoreapp2.1' ">
-			<HintPath>..\SecurityDriven.Inferno\bin\Release\netcoreapp2.1\SecurityDriven.Inferno.dll</HintPath>
+		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'netcoreapp3.1' ">
+			<HintPath>..\SecurityDriven.Inferno\bin\Release\netcoreapp3.1\SecurityDriven.Inferno.dll</HintPath>
 		</Reference>
 
 		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'net462' ">
 			<HintPath>..\SecurityDriven.Inferno\bin\Release\net462\SecurityDriven.Inferno.dll</HintPath>
 		</Reference>
 
-		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'netcoreapp3.1' ">
+		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'net5' ">
 			<HintPath>..\SecurityDriven.Inferno\bin\Release\netstandard2.0\SecurityDriven.Inferno.dll</HintPath>
+		</Reference>
+
+		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'net6' ">
+			<HintPath>..\SecurityDriven.Inferno\bin\Release\netcoreapp3.1\SecurityDriven.Inferno.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 
