--- a/SecurityDriven.Inferno.Tests.csproj
+++ b/SecurityDriven.Inferno.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net462;netcoreapp3.1;net5;net6;net7</TargetFrameworks>
+		<TargetFrameworks>net462;netcoreapp3.1;net5;net6;net7;net8</TargetFrameworks>
 		<IsPackable>false</IsPackable>
 		<SignAssembly>true</SignAssembly>
 		<DelaySign>false</DelaySign>
@@ -22,8 +22,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-		<PackageReference Include="Microsoft.TestPlatform" Version="17.5.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+		<PackageReference Include="Microsoft.TestPlatform" Version="17.6.0" />
 		<PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
 		<PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
@@ -49,6 +49,10 @@
 		</Reference>
 
 		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'net7'">
+			<HintPath>..\SecurityDriven.Inferno\bin\Release\netcoreapp3.1\SecurityDriven.Inferno.dll</HintPath>
+		</Reference>
+
+		<Reference Include="SecurityDriven.Inferno" Condition="'$(TargetFramework)' == 'net8'">
 			<HintPath>..\SecurityDriven.Inferno\bin\Release\netcoreapp3.1\SecurityDriven.Inferno.dll</HintPath>
 		</Reference>
 	</ItemGroup>
